--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 tune/cleanRaw.epd
 tune/results.pgn
 tune/results.epd
+# Ignore generated/train/test datasets
+*.epd
+tune/cleanRaw.epd
+tune/results.pgn
+tune/results.epd
